doctorapp/force-app/main/default/objects/Inventory_Adjustment__c/Inventory_Adjustment__c.object-meta.xml
<CustomObject>
    <description>Manual stock change records.</description>
    <label>Inventory Adjustment</label>
    <nameField>
        <displayFormat>ADJ-{000000}</displayFormat>
        <label>Adjustment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>