doctorapp/force-app/main/default/objects/Inventory_Adjustment__c/fields/Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When the adjustment occurred.</description>
    <label>Adjustment Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>