doctorapp/force-app/main/default/objects/Inventory_Adjustment__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>References Store.</description>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Inventory Adjustments</relationshipLabel>
    <relationshipName>Inventory_Adjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>