doctorapp/force-app/main/default/objects/Inventory_Adjustment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User performing the adjustment.</description>
    <label>Adjusted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>POS Inventory Adjustments</relationshipLabel>
    <relationshipName>POS_Inventory_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>