doctorapp/force-app/main/default/objects/Inventory_Adjustment__c/validationRules/Quantity_Not_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Not_Zero</fullName>
    <active>true</active>
    <description>An adjustment must move stock up or down, never by zero.</description>
    <errorConditionFormula>Quantity__c = 0</errorConditionFormula>
    <errorMessage>Quantity cannot be zero.</errorMessage>
    <errorDisplayField>Quantity__c</errorDisplayField>
</ValidationRule>